--- a/packages/starlight/components/TableOfContents/MobileTableOfContents.astro
+++ b/packages/starlight/components/TableOfContents/MobileTableOfContents.astro
@@ -47,11 +47,12 @@ const t = useTranslations(locale);
 	}
 
 	summary {
+		--pad-x: 1rem;
 		gap: 0.5rem;
 		align-items: center;
 		height: var(--sl-mobile-toc-height);
 		border-bottom: 1px solid var(--sl-color-hairline-shade);
-		padding: 0.5rem 1rem;
+		padding: 0.5rem var(--pad-x);
 		font-size: var(--sl-text-xs);
 		outline-offset: var(--sl-outline-offset-inside);
 	}
@@ -61,16 +62,16 @@ const t = useTranslations(locale);
 	}
 	@supports (padding: max(0px)) {
 		summary {
-			padding-left: max(1rem, env(safe-area-inset-left));
-			padding-right: max(1rem, env(safe-area-inset-right));
+			padding-left: max(var(--pad-x), env(safe-area-inset-left));
+			padding-right: max(var(--pad-x), env(safe-area-inset-right));
 		}
 
 		@media (min-width: 50rem) {
 			:global([dir='ltr']) summary {
-				padding-left: 1rem;
+				padding-left: var(--pad-x);
 			}
 			:global([dir='rtl']) summary {
-				padding-right: 1rem;
+				padding-right: var(--pad-x);
 			}
 		}
 	}
