--- a/packages/starlight/layout/PageFrame.astro
+++ b/packages/starlight/layout/PageFrame.astro
@@ -42,16 +42,9 @@ const t = useTranslations(locale);
 		width: 100%;
 		height: var(--sl-nav-height);
 		border-bottom: 1px solid var(--sl-color-hairline-shade);
-		padding: var(--sl-nav-pad-y) var(--sl-nav-pad-x);
-		padding-inline-end: var(--sl-nav-pad-x);
+		padding: var(--sl-safe-nav-pad-top) var(--sl-safe-nav-pad-right) var(--sl-nav-pad-y)
+			var(--sl-safe-nav-pad-left);
 		background-color: var(--sl-color-bg-nav);
-	}
-	@supports (padding: max(0px)) {
-		.header {
-			padding: max(var(--sl-nav-pad-y), env(safe-area-inset-top))
-				max(var(--sl-nav-pad-x), env(safe-area-inset-right)) var(--sl-nav-pad-y)
-				max(var(--sl-nav-pad-x), env(safe-area-inset-left));
-		}
 	}
 
 	:global([data-has-sidebar]) .header {
@@ -84,16 +77,11 @@ const t = useTranslations(locale);
 	}
 
 	@media (min-width: 50rem) {
-		:global([data-has-sidebar]) .header {
-			padding-inline-end: var(--sl-nav-pad-x);
+		:global([dir='ltr'][data-has-sidebar]) .header {
+			padding-right: var(--sl-safe-nav-pad-right);
 		}
-		@supports (padding: max(0px)) {
-			:global([dir='ltr'][data-has-sidebar]) .header {
-				padding-right: max(var(--sl-nav-pad-x), env(safe-area-inset-right));
-			}
-			:global([dir='rtl'][data-has-sidebar]) .header {
-				padding-left: max(var(--sl-nav-pad-x), env(safe-area-inset-left));
-			}
+		:global([dir='rtl'][data-has-sidebar]) .header {
+			padding-left: var(--sl-safe-nav-pad-left);
 		}
 		.sidebar-pane {
 			--sl-sidebar-visibility: visible;
