--- a/packages/starlight/style/props.css
+++ b/packages/starlight/style/props.css
@@ -95,6 +95,7 @@
 	--sl-nav-pad-x: 1rem;
 	--sl-nav-pad-y: 0.75rem;
 	--sl-mobile-toc-height: 3rem;
+	--sl-mobile-toc-pad-x: 1rem;
 	--sl-sidebar-width: 18.75rem;
 	--sl-sidebar-pad-x: 1rem;
 	--sl-content-width: 45rem;
@@ -117,6 +118,8 @@
 	--sl-safe-content-pad-left: var(--sl-content-pad-x);
 	--sl-safe-content-pad-right: var(--sl-content-pad-x);
 	--sl-safe-content-pad-bottom: var(--sl-content-pad-y);
+	--sl-safe-mobile-toc-pad-left: var(--sl-mobile-toc-pad-x);
+	--sl-safe-mobile-toc-pad-right: var(--sl-mobile-toc-pad-x);
 }
 
 :root[data-theme='light'],
@@ -197,14 +200,18 @@
 		--sl-safe-content-pad-left: max(var(--sl-content-pad-x), env(safe-area-inset-left));
 		--sl-safe-content-pad-right: max(var(--sl-content-pad-x), env(safe-area-inset-right));
 		--sl-safe-content-pad-bottom: max(var(--sl-content-pad-y), env(safe-area-inset-bottom));
+		--sl-safe-mobile-toc-pad-left: max(var(--sl-mobile-toc-pad-x), env(safe-area-inset-left));
+		--sl-safe-mobile-toc-pad-right: max(var(--sl-mobile-toc-pad-x), env(safe-area-inset-right));
 	}
 
 	@media (min-width: 50rem) {
 		:root[dir='ltr'][data-has-sidebar] {
 			--sl-safe-content-pad-left: var(--sl-content-pad-x);
+			--sl-safe-mobile-toc-pad-left: var(--sl-mobile-toc-pad-x);
 		}
 		:root[dir='rtl'][data-has-sidebar] {
 			--sl-safe-content-pad-right: var(--sl-content-pad-x);
+			--sl-safe-mobile-toc-pad-right: var(--sl-mobile-toc-pad-x);
 		}
 	}
 }
