--- a/packages/starlight/components/TableOfContents/TableOfContentsList.astro
+++ b/packages/starlight/components/TableOfContents/TableOfContentsList.astro
@@ -60,10 +60,10 @@ const { toc, isMobile = false, depth = 0 } = Astro.props;
 	}
 	@supports (padding: max(0px)) {
 		:global([dir='ltr']) .isMobile a {
-			padding-right: env(safe-area-inset-right);
+			padding-right: max(var(--pad-inline), env(safe-area-inset-right));
 		}
 		:global([dir='rtl']) .isMobile a {
-			padding-left: env(safe-area-inset-left);
+			padding-left: max(var(--pad-inline), env(safe-area-inset-left));
 		}
 	}
 	.isMobile:first-child > li:first-child > a {
