--- a/packages/starlight/user-components/LinkCard.astro
+++ b/packages/starlight/user-components/LinkCard.astro
@@ -10,38 +10,29 @@ interface Props extends HTMLAttributes<'a'> {
 const { heading, description, ...attributes } = Astro.props;
 ---
 
-<a {...attributes} class="content">
-	<span class="flex leading">
-		<p class="title">
-			<span set:html={heading} />
-		</p>
-		{
-			description && (
-				<p class="description">
-					<span set:html={description} />
-				</p>
-			)
-		}
-	</span>
-	<Icon name="right-arrow" size="1.333em" class="icon rtl-flip" />
-</a>
+<div>
+	<a {...attributes} class="content">
+		<span class="flex stack">
+			<span class="title" set:html={heading} />
+			{description && <span class="description" set:html={description} />}
+		</span>
+		<Icon name="right-arrow" size="1.333em" class="icon rtl-flip" />
+	</a>
+</div>
 
 <style>
 	a {
 		display: grid;
 		grid-template-columns: 1fr auto;
 		gap: 0.5rem;
-		width: 100%;
 		border: 1px solid var(--sl-color-gray-5);
 		border-radius: 0.5rem;
 		padding: 1rem;
 		text-decoration: none;
-		color: var(--sl-color-gray-2);
 		box-shadow: var(--sl-shadow-sm);
-		margin-top: 1.25em;
 	}
 
-	.leading {
+	.stack {
 		flex-direction: column;
 		gap: 0.5rem;
 	}
@@ -54,7 +45,6 @@ const { heading, description, ...attributes } = Astro.props;
 	}
 
 	.description {
-		margin-top: 0 !important;
 		color: var(--sl-color-gray-3);
 		line-height: 150%;
 	}
