style: prefer 1.5 > 150% for line-height

--- a/packages/starlight/user-components/LinkCard.astro
+++ b/packages/starlight/user-components/LinkCard.astro
@@ -46,7 +46,7 @@ const { heading, description, ...attributes } = Astro.props;
 
 	.description {
 		color: var(--sl-color-gray-3);
-		line-height: 150%;
+		line-height: 1.5;
 	}
 
 	.icon {
