--- a/packages/starlight/user-components/LinkCard.astro
+++ b/packages/starlight/user-components/LinkCard.astro
@@ -2,18 +2,18 @@
 import Icon from './Icon.astro';
 import type { HTMLAttributes } from 'astro/types';
 
-interface Props extends HTMLAttributes<'a'> {
-	heading: string;
+interface Props extends Omit<HTMLAttributes<'a'>, 'title'> {
+	title: string;
 	description?: string;
 }
 
-const { heading, description, ...attributes } = Astro.props;
+const { title, description, ...attributes } = Astro.props;
 ---
 
 <div>
 	<a {...attributes}>
 		<span class="flex stack">
-			<span class="title" set:html={heading} />
+			<span class="title" set:html={title} />
 			{description && <span class="description" set:html={description} />}
 		</span>
 		<Icon name="right-arrow" size="1.333em" class="icon rtl:flip" />
