Smaller text in preview boxes

--- a/docs/src/components/theme-designer.astro
+++ b/docs/src/components/theme-designer.astro
@@ -170,6 +170,7 @@ module.exports = {
     padding: 1rem;
     color: var(--sl-color-gray-2);
     background-color: var(--sl-color-black);
+    font-size: var(--sl-text-sm);
   }
   .link {
     text-decoration: underline;
