`cursor: pointer` on preset buttons

--- a/docs/src/components/theme-designer/presets.astro
+++ b/docs/src/components/theme-designer/presets.astro
@@ -62,6 +62,7 @@ const resolvedPresets = Object.entries(presets).map(([key, preset]) => {
 		background-color: var(--dark-bg, var(--sl-color-white));
 		color: var(--dark-text, var(--sl-color-black));
 		font-size: var(--sl-text-xs);
+		cursor: pointer;
 	}
 	:global([data-theme='light']) [data-preset] {
 		background-color: var(--light-bg);
