--- a/docs/src/components/theme-designer.astro
+++ b/docs/src/components/theme-designer.astro
@@ -36,11 +36,11 @@ const {
 		<Tabs>
 			<TabItem label="CSS">
 				<slot name="css-docs" />
-				<pre class="generated-code"><code data-theme-css /></pre>
+				<pre class="generated-code" tabindex="0"><code data-theme-css /></pre>
 			</TabItem>
 			<TabItem label="Tailwind">
 				<slot name="tailwind-docs" />
-				<pre class="generated-code"><code data-theme-tailwind /></pre>
+				<pre class="generated-code" tabindex="0"><code data-theme-tailwind /></pre>
 			</TabItem>
 		</Tabs>
 	</theme-designer>
