Revert "Does it need content?"
This reverts commit 7020d9bca5bd9ea3002557130e8c4fc77c8cb24d.

--- a/docs/src/components/theme-designer.astro
+++ b/docs/src/components/theme-designer.astro
@@ -39,14 +39,14 @@ const {
 				<pre
 					class="astro-code"
 					tabindex="0"
-					style="background-color: var(--astro-code-color-background)"><code data-theme-css>/* loading */</code></pre>
+					style="background-color: var(--astro-code-color-background)"><code data-theme-css /></pre>
 			</TabItem>
 			<TabItem label="Tailwind">
 				<slot name="tailwind-docs" />
 				<pre
 					class="astro-code"
 					tabindex="0"
-					style="background-color: var(--astro-code-color-background)"><code data-theme-tailwind>/* loading */</code></pre>
+					style="background-color: var(--astro-code-color-background)"><code data-theme-tailwind /></pre>
 			</TabItem>
 		</Tabs>
 	</theme-designer>
