--- a/docs/src/components/theme-designer.astro
+++ b/docs/src/components/theme-designer.astro
@@ -36,17 +36,11 @@ const {
 		<Tabs>
 			<TabItem label="CSS">
 				<slot name="css-docs" />
-				<pre
-					class="astro-code"
-					tabindex="0"
-					style="background-color: var(--astro-code-color-background)"><code data-theme-css /></pre>
+				<pre class="generated-code" tabindex="0"><code data-theme-css /></pre>
 			</TabItem>
 			<TabItem label="Tailwind">
 				<slot name="tailwind-docs" />
-				<pre
-					class="astro-code"
-					tabindex="0"
-					style="background-color: var(--astro-code-color-background)"><code data-theme-tailwind /></pre>
+				<pre class="generated-code" tabindex="0"><code data-theme-tailwind /></pre>
 			</TabItem>
 		</Tabs>
 	</theme-designer>
@@ -144,8 +138,9 @@ module.exports = {
 		gap: 1.5rem;
 	}
 
-	.astro-code {
+	.generated-code {
 		height: 16rem;
+		background-color: var(--astro-code-color-background);
 		overflow: auto scroll;
 		user-select: all;
 	}
