--- a/packages/starlight/user-components/LinkCard.astro
+++ b/packages/starlight/user-components/LinkCard.astro
@@ -11,25 +11,36 @@ const { title, description, ...attributes } = Astro.props;
 ---
 
 <div>
-	<a {...attributes}>
-		<span class="flex stack">
+	<span class="flex stack">
+		<a {...attributes}>
 			<span class="title" set:html={title} />
-			{description && <span class="description" set:html={description} />}
-		</span>
-		<Icon name="right-arrow" size="1.333em" class="icon rtl:flip" />
-	</a>
+		</a>
+		{description && <span class="description" set:html={description} />}
+	</span>
+	<Icon name="right-arrow" size="1.333em" class="icon rtl:flip" />
 </div>
 
 <style>
-	a {
+	div {
 		display: grid;
 		grid-template-columns: 1fr auto;
 		gap: 0.5rem;
 		border: 1px solid var(--sl-color-gray-5);
 		border-radius: 0.5rem;
 		padding: 1rem;
-		text-decoration: none;
 		box-shadow: var(--sl-shadow-sm);
+		position: relative;
+	}
+
+	a {
+		text-decoration: none;
+	}
+
+	/* a11y fix for https://github.com/withastro/starlight/issues/487 */
+	a::before {
+		content: "";
+		position: absolute;
+		inset: 0;
 	}
 
 	.stack {
