--- a/packages/starlight/components/Footer.astro
+++ b/packages/starlight/components/Footer.astro
@@ -48,4 +48,7 @@ const prevNextLinks = getPrevNextLinks(sidebar, config.pagination, {
 		font-size: var(--sl-text-sm);
 		color: var(--sl-color-gray-3);
 	}
+	.meta > :global(p:only-child) {
+		margin-inline-start: auto;
+	}
 </style>
