Isolate page content in own stacking context

--- a/packages/starlight/layout/TwoColumnContent.astro
+++ b/packages/starlight/layout/TwoColumnContent.astro
@@ -18,6 +18,10 @@ interface Props {
 </div>
 
 <style>
+	.main-pane {
+		isolation: isolate;
+	}
+
 	@media (min-width: 72rem) {
 		.right-sidebar-container {
 			order: 2;
