--- a/packages/starlight/components/TableOfContents/TableOfContentsList.astro
+++ b/packages/starlight/components/TableOfContents/TableOfContentsList.astro
@@ -14,7 +14,7 @@ const { toc, isMobile = false, depth = 0 } = Astro.props;
 	{
 		toc.map((heading) => (
 			<li>
-				<a href={'#' + heading.slug} aria-current={heading.current && 'true'}>
+				<a href={'#' + heading.slug}>
 					<span>{heading.text}</span>
 				</a>
 				{heading.children.length > 0 && (
