--- a/packages/starlight/user-components/GeneratedIndex.astro
+++ b/packages/starlight/user-components/GeneratedIndex.astro
@@ -14,7 +14,7 @@ const entries = flattenSidebar(getSidebar(directory, locale)).filter((entry) =>
 
 // TODO: Only go the depth of the current directory
 // TODO: How should the description logic be handled?
-// TODO: Handle locale automatically?
+// TODO: Is there some type magic we can do on the locale prop?
 ---
 
 <CardGrid>
