--- a/packages/starlight/components/SidebarSublist.astro
+++ b/packages/starlight/components/SidebarSublist.astro
@@ -1,6 +1,7 @@
 ---
 import { flattenSidebar, type SidebarEntry } from '../utils/navigation';
 import Icon from '../user-components/Icon.astro';
+import Badge from './Badge.astro';
 
 interface Props {
 	sublist: SidebarEntry[];
@@ -19,7 +20,7 @@ interface Props {
 						class:list={{ large: !Astro.props.nested }}
 					>
 						{entry.label}
-						{entry.tag && <span>{entry.tag}</span>}
+						{entry.tag && <Badge>{entry.tag}</Badge>}
 					</a>
 				) : (
 					<details
@@ -115,12 +116,5 @@ interface Props {
 		a {
 			font-size: var(--sl-text-sm);
 		}
-	}
-
-	span {
-		color: red;
-		background-color: aqua;
-		padding-inline: 0.25rem;
-		font-weight: bold;
 	}
 </style>
